crates/rlf-macros/tests/fail/static_selector_component_only.rs
use rlf::rlf;

rlf! {
    card = {
        nom.one: "card",
        nom.other: "cards"
    };
    bad = "{card:nom}";
}

fn main() {}
