crates/rlf-macros/tests/fail/static_selector_component_only.stderr
error: phrase 'card' has no variant 'nom'
       note: available variants: nom.one, nom.other
 --> tests/fail/static_selector_component_only.rs:8:11
  |
8 |     bad = "{card:nom}";
  |           ^^^^^^^^^^^^
